semi final (added more logic)

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -54,9 +54,10 @@ nav ul li a:hover{
 footer{
     margin: 0;
     width: 100vw;
-    /* position: absolute;
+    padding: 1.2rem 0;
+    position: absolute;
     bottom: 0;
-    left: 0; */
+    left: 0;
     background-color: rgb(39, 39, 39);
     color: white;
 }
@@ -65,4 +66,22 @@ footer h3{
     margin: 1.5rem;
     text-align: center;
 
+}
+
+/* View Post Image */
+
+.post-image {
+    width: 50vw;
+    margin: 0 auto;
+    height: 50vh;
+    max-height: 720px;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    box-shadow: 0 0 10px 1px rgb(160, 160, 160);
+}
+
+.post-body {
+    text-align: center;
+    padding: 0 30vw;
 }
